--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,3 +23,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_APP_DEVELOPER_A2983 }}
           channelId: live
           projectId: app-developer-a2983
+          entryPoint: multiplos # Asegúrate de poner el directorio correcto aquí
